--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".Custom_row"></activity>
+        <activity android:name=".Custom_row" />
+        <activity android:name=".Spinner1"></activity>
     </application>
 
 </manifest>
